--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-04-06  Atsushi Togo  <atz.togo@gmail.com>
+
+	* Version 1.7.3
+
 2015-04-05  Atsushi Togo  <atz.togo@gmail.com>
 
 	* src/triplet_kpoint.{c,h}:
