Basic reciprocal grid point part was separated from kpoint.c into kgrid.c. tetrahedron_method now relies only on kgrid.c. An example for tetrahedron method is isolated as tetrahedon.c in example directory.

--- a/example/README
+++ b/example/README
@@ -10,4 +10,7 @@ To compile obsolete example.f90
 % gcc -c spglib_f.c
 % gfortran example.f90 spglib_f.o -L[library directory] -lsymspg -lm
 
+To compile tetrahedron.c
+% gcc tetrahedron.c [source directory]/tetrahedron_method.c [source directory]/kgrid.c -I[include directory] -L[library directory] -lsymspg
+
 Togo <atz.togo@gmail.com>
