--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-08-19  Atsushi Togo  <atz.togo@gmail.com>
+
+	* Version 1.8.2.2
+
+	* src/spglib.c (is_rhombohedral): 
+
+	Regardless of rhombohedral or hexagonal setting, a primitive
+	rhombohedral is found when using finding primitive cell functions.
+
 2015-08-03  Atsushi Togo  <atz.togo@gmail.com>
 
 	* Version 1.8.2.1
