--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2016-10-19  Atsushi Togo  <atz.togo@gmail.com>
 
+	* Travis test
+
+2016-10-19  Atsushi Togo  <atz.togo@gmail.com>
+
 	* Version 1.9.6
 
 	Collection of minor fixes.
