--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2017-12-13  Atsushi Togo  <atz.togo@gmail.com>
+
+	* Version 1.10.2
+
+	* src/Makefile.am:
+
+	Automake didn't work due to the lack of determination.{c,h}
+	lines. This was fixed.
+
 2017-10-27  Atsushi Togo  <atz.togo@gmail.com>
 
 	* Version 1.10.1
