--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,10 @@
 
 	Bug fix. Origin shift was not correctly computed when the
 	standardized basis vectors are rotated in this method to find most
-	similar choice of basis vectors to the idealized ones.
+	similar choice of basis vectors to the idealized ones. This bug
+	affected to 'origin_shift' and 'std_positions' in spglib dataset
+	and the functions 'spg_standardize_cell', 'spg_find_primitive',
+	and 'spg_refine_cell'.
 
 2018-11-09  Atsushi Togo  <atz.togo@gmail.com>
 
