--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2018-12-07  Atsushi Togo  <atz.togo@gmail.com>
+
+	* Version 1.11.2
+
+	* src/refinement.c (find_similar_bravais_lattice):
+
+	Bug fix. Again, origin shift was still not correctly computed when
+	the standardized basis vectors are rotated in this method to find
+	most similar choice of basis vectors to the idealized ones. This
+	bug affected to 'origin_shift' and 'std_positions' in spglib
+	dataset and the functions 'spg_standardize_cell',
+	'spg_find_primitive', and 'spg_refine_cell'. Although there
+	existed this bug, tests unfortunately passed. So a new test to
+	check Wyckoff positions consistency was added to find possible
+	bugs related to origin shift because this bug was found by getting
+	wrong Wyckoff positions reported by a user.
+
 2018-11-12  Atsushi Togo  <atz.togo@gmail.com>
 
 	* Version 1.11.1
