--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020-04-17  Atsushi Togo  <atz.togo@gmail.com>
+
+	* Version 1.15
+
+	'crystallographic_orbits' was added to SpglibDataset by Lauri Himanen.
+	Rust interface was implemented by Seaton Ullberg.
+
 2019-07-30  Atsushi Togo  <atz.togo@gmail.com>
 
 	* Version 1.14.1
