Increment nano version.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-12-8  Atsushi Togo  <atz.togo@gmail.com>
+
+	* Version 1.16.3
+
+	Just to deploy source code to PyPI.
+
 2021-08-10  Atsushi Togo  <atz.togo@gmail.com>
 
 	* Version 1.16.2
