--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-05-05  Atsushi Togo  <atz.togo@gmail.com>
+
+	* Version 1.16.3
+
+    Maintenance release including many minor fixes and improvements.
+
 2021-08-10  Atsushi Togo  <atz.togo@gmail.com>
 
 	* Version 1.16.2
