--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-05-06 Atsushi Togo <atz.togo@gmail.com>
+
+    * Version 1.16.5
+
+    Bug fix of issue #157.
+
 2022-05-05 Atsushi Togo <atz.togo@gmail.com>
 
     * Version 1.16.4
