--- a/doc/references.bib
+++ b/doc/references.bib
@@ -24,7 +24,7 @@
 @misc{Souvignier08,
     author = {Bernd Souvignier},
     title = {Group theory applied to crystallography},
-    note = {\url{https://www.math.ru.nl/~souvi/krist_09/cryst.pdf}},
+    url = {https://www.math.ru.nl/~souvi/krist_09/cryst.pdf},
 }
 @article{Opgenorth:js0065,
   author = "Opgenorth, J. and Plesken, W. and Schulz, T.",
