Fix linkcheck issues
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -52,7 +52,7 @@
 }
 @article{10.2307/2322930,
  ISSN = {00029890, 19300972},
- URL = {http://www.jstor.org/stable/2322930},
+ URL = {https://www.jstor.org/stable/2322930},
  author = {Howard Hiller},
  journal = {The American Mathematical Monthly},
  number = {10},
